@@ -1,12 +1,12 @@
 name="@PACKAGE@"
 version="@VERSION@"
 description="PG'OCaml is a set of OCaml bindings for the PostgreSQL database."
-requires="unix,extlib,csv,pcre,calendar"
+requires="unix,@EXTLIB@,csv,pcre,calendar"
 archive(byte)="pgocaml.cma"
 archive(native)="pgocaml.cmxa"
 
 package "syntax" (
-  requires = "pgocaml,camlp4"
+  requires = "@PACKAGE@,camlp4"
   version = "@VERSION@"
   description = "Syntax extension: PostgreSQL statements checked at compile-time"
   archive(syntax,preprocessor) = "pa_pgsql.cmo"
