@@ -19,6 +19,8 @@
 PACKAGE	:= pgocaml
 VERSION	:= 1.4
 
+USE_BATTERIES := no
+
 OCAMLLIBDIR := $(shell ocamlc -where)
 
 # Default location for Unix domain socket directory.  If the auto-detection
