@@ -21,6 +21,9 @@
  *)
 
 open Printf
+IFDEF USE_BATTERIES THEN
+module Option = BatOption
+ENDIF
 
 let (//) = Filename.concat
 
